Added new table and using the list command

--- a/index.html
+++ b/index.html
@@ -74,5 +74,49 @@ Bakı, Nərimanov r-nu
         <td>55000</td>
     </tr>
 </table>
+<br><hr>
+<table border ="1" width="90%" >
+    <tr>
+        <th>Name</th>
+        <th>Surname</th>
+        <th>Age</th>
+        <th>Number</th>
+        <th>Email</th>
+    </tr>
+    <tr>
+        <td>Fatima</td>
+        <td>Malikova</td>
+        <td>22</td>
+        <td>+994555555555</td>
+        <td>fatima@example.com</td>
+    </tr>
+    <tr>
+        <td>John</td>
+        <td>Doe</td>
+        <td>30</td>
+        <td>+1234567890</td>
+        <td>john@example.com</td>
+    </tr>
+    <tr>
+        <td>Jane</td>
+        <td>Smith</td>
+        <td>28</td>
+        <td>+0987654321</td>
+        <td>jane@example.com</td>
+    </tr>
+
+</table>
+<ul type="circle">
+    <li>Home</li>
+    <li>About</li>
+    <li>Services</li>
+    <li>Contact</li>
+</ul>
+<ol type="A">
+    <li>Home</li>
+    <li>About</li>
+    <li>Services</li>
+    <li>Contact</li>
+</ol>
 </body>
 </html>
