--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice</title>
 </head>
-<body>
+<body style="background-color: rgb(138, 232, 212);">
     <h1>Welcome to My Turbo.az</h1>
     <hr>
      <marquee width = "100%" style="font-size: 30px;" behavior = "scrole" direction="">
