Added file type of input

--- a/index.html
+++ b/index.html
@@ -41,9 +41,14 @@ Bakı, Nərimanov r-nu
 
   <label for="color">Color:</label>
   <input type="color" id="color" name="color" value="#ff0000">
-    <br><br>
+  
+  <br><br>
+  <input type="file" id="myfile" name="myfile"><br><br>
+ 
   <input type="submit" id="submit" value="Submit">
   <input type="reset" id="reset" value="Reset">
+
+  
    
 </form>
 <br> 
